src/scss/app.scss
* {
    cursor:none;
    font-family: "Akzidenz-Grotesk Pro";
}

html, body {
    padding: 0;
    margin: 0;
    position: relative;
    background-color: #fff;
    font-size: 26px;
    font-family:"Akzidenz-Grotesk Pro", serif;
    overflow-x: hidden;
}

#app {
    transition: all 1s ease-in-out;
    opacity: 1;

  &.hide {
    opacity: 0;
  }
}


ul {
    list-style: none;
    padding: 0;
    margin: 0;
}
a {
    text-decoration: none;
    color: inherit;
}

h2 {
    margin: 0;
    padding: 0;
    mix-blend-mode: difference;
}

.header {
    padding: 23px 20px;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 17;
    width: 100vw;
    box-sizing: border-box;
    color: white;
    mix-blend-mode: difference;
    
    &-list {
        display: flex;
        align-items: center;
        @media (max-width: 425px) {
            justify-content: space-between;
        }
    }
    &-item {
        font-size: 26px;
        line-height: 100%;
    }
    .item-home {
        width: 18vw;
        padding-left: 5px;
        @media (max-width: 768px) {
          padding-left: 0;
        }
        @media (max-width: 425px) {
            width: auto;
        }
    }
    .item-works {
        width: 41vw;
        padding-left: 5px;
        @media (max-width: 425px) {
            display: none;
        }
    }
    .item-about {
        text-align: right;
        width: 41vw;
        @media (max-width: 425px) {
            width: auto;
        }
    }
}
main {
    min-height: 100vh;
}

.cursor {
    position: fixed;
    width: 40px;
    height: 40px;
    top: -50%;
    left: -50%;
    margin: -20px 0 0 -20px;
    border-radius: 50%;
    background-color: white;
    backface-visibility: hidden;
    transition: transform 0.2s ease-out;
    mix-blend-mode: difference;
    z-index: 1000;
    pointer-events: none;
    transition: transform 0.3s ease;
}
  
.cursor-hover {
   transform: scale(1.8);
 }

.slideInUp {
    -webkit-animation-name: slideInUp;
    animation-name: slideInUp;
    -webkit-animation-duration: 1s;
    animation-duration: 1s;
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both;
}
@-webkit-keyframes slideInUp {
    0% {
    -webkit-transform: translateY(100px);
    transform: translateY(100px);
    opacity: 0;
    }
    100% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
    opacity: 1;
    }
}

@keyframes slideInUp {
    0% {
    -webkit-transform: translateY(100px);
    transform: translateY(100px);
    visibility: visible;
    }
    100% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
    }
} 

